packages/edxml-test-corpus/edxml-test-corpus-3.0.1.tar.gz/edxml-test-corpus-3.0.1/edxml_test_corpus/tests/3/3.0/3.0.0/invalid/ontology/data-type-enum-element-order.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~                                                                           ~
  ~                     Copyright (c) 2020 the EDXML Foundation               ~
  ~                                                                           ~
  ~                                  http://edxml.org                         ~
  ~                                                                           ~
  ~                    This file is part of the EDXML Test Corpus             ~
  ~                      and is released under the MIT License:               ~
  ~                        https://opensource.org/licenses/MIT                ~
  ~                                                                           ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<!--
Testing ontology component validation, verify
if a two enum data types with differing element ordering are considered to differ.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <object-types>
      <object-type name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" data-type="enum:yes:no"/>
    </object-types>
    <concepts/>
    <event-types/>
    <sources/>
  </ontology>
  <ontology>
    <object-types>
      <!-- Swapping the enum elements here should yield a conflicting definition -->
      <object-type name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" data-type="enum:no:yes"/>
    </object-types>
    <concepts/>
    <event-types/>
    <sources/>
  </ontology>
</edxml>
